--- a/src/styles/AnalyzePage.scss
+++ b/src/styles/AnalyzePage.scss
@@ -1,10 +1,8 @@
 .no-content {
-  background-color: #fff;
-  height: 386px;
-  width: 100%;
-  border-radius: 32px;
   display: flex;
   justify-content: center;
   align-items: center;
   color: #818181;
+  position: relative;
+  top: 40%;
 }
