--- a/src/styles/DiaryView.scss
+++ b/src/styles/DiaryView.scss
@@ -91,11 +91,13 @@
   justify-content: center;
   align-items: center;
   flex-direction: row;
+  margin-top: 20px;
+  box-sizing: border-box;
 }
 
 .weekly-container {
   width: 828px;
-  height: 790px;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
