Style: 은디니와 함께 스타일 전반적으로 수정

--- a/src/layout/Header/header.css
+++ b/src/layout/Header/header.css
@@ -56,7 +56,7 @@
   height: 7px;
   left: 0;
   bottom: -8px;
-  background: url("./밑줄.png") no-repeat center;
+  background: url("./underLine.png") no-repeat center;
   background-size: cover;
 }
 
