--- a/src/styles/DiaryView.scss
+++ b/src/styles/DiaryView.scss
@@ -17,7 +17,7 @@
     width: 15%;
     max-width: 280px;
     min-width: 200px;
-    
+
     button {
       background-color: #2353b5;
       width: 100%;
@@ -42,7 +42,7 @@
         display: flex;
         transition: background-color 0.3s;
         align-items: center;
-    
+
         img {
           width: 24px;
           height: 24px;
@@ -50,12 +50,11 @@
         }
       }
     }
-    
-  
+
     .activeLi {
       background-color: rgba(35, 83, 181, 0.1);
     }
-  
+
     hr {
       margin: 24px 0px;
       opacity: 0.4;
@@ -71,21 +70,16 @@
       font-size: 36px;
       color: #2353b5;
     }
-  
+
     .main-content1 {
       display: flex;
-
-
     }
-
   }
-  
-
 }
 
 .analysis-container {
   width: 100%;
-  height: 100%;
+  height: 792px;
   gap: 20px;
   display: flex;
   justify-content: center;
@@ -107,8 +101,11 @@
 }
 
 .feedback-title {
+  width: 100%;
   font-size: 16px;
   color: #2353b5;
+  display: flex;
+  align-items: start;
 }
 
 .feedback-content {
@@ -118,13 +115,24 @@
   flex-direction: column;
   width: 748px;
   height: 446px;
-  gap: 20px;
+  gap: 28px;
   background-color: #e3eefc;
   border-radius: 32px;
   white-space: pre-wrap;
   font-size: 14px;
+  line-height: 22px;
   color: #818181;
   margin: 32px 24px;
   padding: 24px;
   box-sizing: border-box;
+}
+
+.feedback-scroll {
+  height: 264px;
+  overflow-y: auto;
+}
+
+.feedback-scroll.oneline {
+  display: flex;
+  align-items: center;
 }
