--- a/src/styles/Emotion.scss
+++ b/src/styles/Emotion.scss
@@ -2,7 +2,7 @@
   width: 684px;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
   color: #353535;
 }
 
@@ -15,7 +15,7 @@
   justify-content: center;
   align-items: center;
   border: none;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   border-radius: 8px;
 }
 
@@ -41,7 +41,6 @@
   justify-content: center;
   align-items: center;
   gap: 8px;
-  border-spacing: #bdbdbd 0.4px;
 }
 
 .emotion-content {
@@ -53,9 +52,17 @@
   justify-content: center;
   align-items: center;
   gap: 8px;
-  border-spacing: #bdbdbd 0.4px;
   img {
     width: 48px;
     height: 48px;
   }
+  p {
+    margin: 0px;
+  }
+}
+
+.emotion-content.weekly:last-child {
+  margin-left: 10px;
+  margin-right: 10px;
+  box-sizing: border-box;
 }
