Fix: 일기 작성 부분 수정

--- a/src/styles/calendar/Calendar.scss
+++ b/src/styles/calendar/Calendar.scss
@@ -12,6 +12,7 @@
     max-height: 784px;
     min-width: 415px;
     aspect-ratio: 1;
+    caret-color: transparent;
 
     .calendar-header{
         display: flex;
