--- a/src/layout/Header/header.css
+++ b/src/layout/Header/header.css
@@ -43,6 +43,7 @@
   text-decoration: none;
   color: #2353b5;
   font-weight: bold;
+  caret-color: transparent;
 }
 
 .nav-link.active {
@@ -137,4 +138,22 @@
   color: #2353b5;
   border: 1px solid #2353b5;
   border-radius: 8px;
+}
+
+.close-modal-btn {
+  background-color: #0056b3;
+  color: white;
+  border: 1px solid #0056b3;
+  border-radius: 8px;
+  padding: 13px 25px;
+  margin-right: 20px;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+
+  &:hover {
+    background-color: #FFF;
+    color: #2353b5;
+    border: 1px solid #2353b5;
+  }
 }
