--- a/src/styles/calendar/Day.scss
+++ b/src/styles/calendar/Day.scss
@@ -1,43 +1,44 @@
 .day {
-    display: flex; 
-    align-items: center; 
-    justify-content: center; 
-    position: relative;
-    z-index: 0;
-    font-size: 20px;
-    font-weight: 500;
-    cursor: pointer;
-    aspect-ratio: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  z-index: 0;
+  font-size: 20px;
+  font-weight: 500;
+  cursor: pointer;
+  aspect-ratio: 1;
 }
 
 .currentDay {
-    color:white;
-    transition: 0.1s;
-        &::before{
-        content: "";
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        width: 100%; 
-        height:100%; 
-        background-color: #2353b5; 
-        border-radius: 50%;
-        transform: translate(-50%, -50%);
-        z-index: -1;
-    }
-}
-
-.event {
+  color: white;
+  transition: 0.1s;
+  &::before {
+    content: "";
     position: absolute;
-    top: 20%;
+    top: 50%;
     left: 50%;
-    width: 12%;
-    height: 12%;
+    width: 100%;
+    height: 100%;
+    background-color: #2353b5;
     border-radius: 50%;
     transform: translate(-50%, -50%);
     z-index: -1;
+  }
+  caret-color: transparent;
 }
 
-.invisible{
-    color: rgba(129, 129, 129, 0.4) !important;
+.event {
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  width: 12%;
+  height: 12%;
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+}
+
+.invisible {
+  color: rgba(129, 129, 129, 0.4) !important;
 }
